add image management
